--- a/gb/24/12/11/n14389044.md
+++ b/gb/24/12/11/n14389044.md
@@ -8,16 +8,16 @@
 	<p>【大纪元2024年12月11日讯】（大纪元记者宁海钟综合报导）再有中共高官传出事。中共二十大中央委员、海关总署署长俞建华12月11日被爆昨天（10日）晚上在办公室自杀，据说9日他曾遭中纪委约谈。俞建华10日当天还公开在北京与吉林省高官会面，但目前该则官媒报导已下架。</p>
 <p>独立评论人蔡慎坤12月11日在X平台爆料：中共二十大中央委员、海关总署署长俞建华（61年生）昨晚在办公室自杀了。</p>
 <p>还有人说俞建华是饮弹自尽。网民“之江新军杭大秘书”在X平台发文说，“中央委员俞建华12月10日22时37分在办公室吞枪自杀。”“与孙玉宁一案有关。”</p>
-<p>今年9月24日，中共海关总署党委委员、副署长孙玉宁被调查。他成为近年来海关系统落马的最高级官员。（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337488.md#1" target="_blank" rel="noopener">中共海关总署副署长孙玉宁任上落马</a></span></strong>）</p>
+<p>今年9月24日，中共海关总署党委委员、副署长孙玉宁被调查。他成为近年来海关系统落马的最高级官员。（<strong>延伸阅读：<span style="color: #0000ff"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337488.md#1" target="_blank" rel="noopener nofollow noreferrer">中共海关总署副署长孙玉宁任上落马</a></span></strong>）</p>
 <p>X账户“罗昌平Champion”爆料称，中央委员、国家海关总署署长俞建华，昨日22时37分在办公室吞枪自杀。上个月，海关总署一名处长被抓，引线之一是每年花掉大几十亿搞的智慧海关项目的猫腻。</p>
 <p>有关俞建华自杀的消息，未看到中共官方的报导。截至发稿前，搜索中共海关总署官网领导成员栏，俞建华的名字仍在上面。</p>
 <p>12月11日晚间10时左右，中共海关总署官网发出“海关总署俞建华同志治丧工作小组”讣告称，12月10日，中共海关总署党委书记、署长俞建华“因突发疾病经抢救无效，不幸离世”，终年63岁。讣告仍称俞为“同志”。</p>
 <p>俞建华昨天（10日）还公开露面。据官媒中新网报导，12月10日，吉林省委书记黄强，省委副书记、省长胡玉亭与海关总署署长、党委书记俞建华在北京举行工作会谈。</p>
 <p>但大纪元记者北京时间12月11日傍晚发现，该条新闻已被下架。</p>
-<figure id="attachment_14389046" aria-describedby="caption-attachment-14389046" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389046-f551a53757073d5f4a859845b9127c58.png"><img decoding="async" class="size-large wp-image-14389046" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389046-f551a53757073d5f4a859845b9127c58-600x143.png" alt="" width="600" b="143" /></a><figcaption id="caption-attachment-14389046" class="wp-caption-text">俞建华12月10日和吉林高官会面的官方报导已遭删除。（网页截图）</figcaption></figure>
-<figure id="attachment_14389061" aria-describedby="caption-attachment-14389061" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389061-7c20648db2cc5b2221c7113444e5ca66.png"><img decoding="async" class="size-large wp-image-14389061" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389061-7c20648db2cc5b2221c7113444e5ca66-600x451.png" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-14389061" class="wp-caption-text">在百度搜到的新浪网报导俞建华10日会见吉林高官报导（下方），也已下架。（网路截图）</figcaption></figure>
+<figure id="attachment_14389046" aria-describedby="caption-attachment-14389046" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389046-f551a53757073d5f4a859845b9127c58.png" rel="nofollow"><img decoding="async" class="size-large wp-image-14389046" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389046-f551a53757073d5f4a859845b9127c58-600x143.png" alt="" width="600" b="143"></a><figcaption id="caption-attachment-14389046" class="wp-caption-text">俞建华12月10日和吉林高官会面的官方报导已遭删除。（网页截图）</figcaption></figure>
+<figure id="attachment_14389061" aria-describedby="caption-attachment-14389061" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389061-7c20648db2cc5b2221c7113444e5ca66.png" rel="nofollow"><img decoding="async" class="size-large wp-image-14389061" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389061-7c20648db2cc5b2221c7113444e5ca66-600x451.png" alt="" width="600" b="451"></a><figcaption id="caption-attachment-14389061" class="wp-caption-text">在百度搜到的新浪网报导俞建华10日会见吉林高官报导（下方），也已下架。（网路截图）</figcaption></figure>
 <p>微博上开始出现有关俞建华的话题，有人问：“什么情况？”</p>
-<figure id="attachment_14389048" aria-describedby="caption-attachment-14389048" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389048-8d4292cc543ace4bc8a4c6757eff67a2.png"><img decoding="async" class="size-large wp-image-14389048" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389048-8d4292cc543ace4bc8a4c6757eff67a2-600x316.png" alt="" width="600" b="316" /></a><figcaption id="caption-attachment-14389048" class="wp-caption-text">（网络截图）</figcaption></figure>
+<figure id="attachment_14389048" aria-describedby="caption-attachment-14389048" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14389048-8d4292cc543ace4bc8a4c6757eff67a2.png" rel="nofollow"><img decoding="async" class="size-large wp-image-14389048" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389048-8d4292cc543ace4bc8a4c6757eff67a2-600x316.png" alt="" width="600" b="316"></a><figcaption id="caption-attachment-14389048" class="wp-caption-text">（网络截图）</figcaption></figure>
 <p>公开资料显示，俞建华1961年12月生，江苏盐城人，是资深的国际商务官员。</p>
 <p>他曾历任中共经贸部欧洲司干部，驻比利时使馆三秘、二秘，外经贸部欧洲司四处副处长、处长。2001年11月起，先后任外经贸部、商务部世贸司副司长。2006年10月，任商务部国际司司长。2010年12月，任商务部党组成员。2011年1月，任商务部部长助理。2013年5月，任商务部国际贸易谈判副代表（副部长级）。2013年10月，任中共常驻世界贸易组织代表、特命全权大使。2017年2月，任商务部副部长兼国际贸易谈判副代表。</p>
 <p>2018年2月，任中共常驻联合国日内瓦办事处和瑞士其它国际组织代表团特命全权大使、常驻代表。2019年4月，第二度任商务部副部长兼国际贸易谈判副代表。2021年1月，升任商务部国际贸易谈判代表（正部长级）。</p>
@@ -30,48 +30,43 @@
 <p>“海关那可是超级油水部门呢。”</p>
 <p>“可能是报告没写好，没学到统计局的真本事，导致呈上的数据奏折有瑕疵，搞得包颜大怒赐白绫一条吧！哎……”</p>
 <p>“大家认为他是自杀了吗？我怎么感觉是被杀呀？”</p>
-<p>责任编辑：李仁和#</p>
-<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
-<ul class="related-posts" style="color: #0000ff; list-style: inside;">
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383218.md#1" target="_blank" rel="noopener">【新闻欣视角】习“出局”？传东部战区司令自杀</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280486.md#1" target="_blank" rel="noopener">传中共总参少将耿燎原自缢身亡</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326647.md#1" target="_blank" rel="noopener">中共拟准设外商独资医院 被指养套杀骗局</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/10/27/n14104553.md#1" target="_blank" rel="noopener">李克强猝死 66名中共省部级高官密集病亡</a></span></li>
+<p>责任编辑：李仁和#
+</p>
+<div class="related-article"><span style="color: #000;font-weight: bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383218.md#1" target="_blank" rel="noopener nofollow noreferrer">【新闻欣视角】习“出局”？传东部战区司令自杀</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280486.md#1" target="_blank" rel="noopener nofollow noreferrer">传中共总参少将耿燎原自缢身亡</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326647.md#1" target="_blank" rel="noopener nofollow noreferrer">中共拟准设外商独资医院 被指养套杀骗局</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/10/27/n14104553.md#1" target="_blank" rel="noopener nofollow noreferrer">李克强猝死 66名中共省部级高官密集病亡</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519521.md#1">没有皇帝架子的汉文帝怎样开启文景盛世？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/7/n10898217.md#1">【岳飞传】谋略无双、治军有方的大宋神将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343048.md#1">【古道人生】为何服错药却得生 服对药反而要死？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/6/n14525768.md#1">【品读宋词】花胜去年红 离恨中见旷达</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526743.md#1">【未解之谜】来自3906年的真相 人类的毁灭与新生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/12/n14530106.md#1">【直播】美国土安全部长诺姆在洛杉矶记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/12/n14530223.md#1">【直播】川普和第一夫人出席国会野餐会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/12/n14530124.md#1">【新闻大破解】中共双航母现身 根本纸老虎？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528623.md#1">【军事情报局】F-16首次击落苏-35</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528752.md#1">浦东机场卫星厅空如“鬼城”为何不关？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528586.md#1">【纪元焦点】汪洋取代习？传言背后的内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/12/n14530235.md#1">坚持不染白发 叶童成《浪姐》最年长总冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14529470.md#1">王一博顶泡面头攀岩走壁 惊险夹缝中展英姿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14529531.md#1">晒与黄晓明合照 杨子被指美颜过度认不出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528699.md#1">迪丽热巴演《克拉恋人》爆红 主因与唐嫣有关？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14529018.md#1">禁止骚扰金秀贤令 金世义提抗告遭法院驳回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14528938.md#1">“日式散步”正夯 专家分享其健康益处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528157.md#1">当心！早餐吃的麦片越来越甜和不营养</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/9/n14527359.md#1">打造家庭菜园 一起来种豌豆吧！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528547.md#1">时光与烟霞之间 旧台中火车站的记忆之窗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/12/n14529653.md#1">在海滩度假应该避免这些NG行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/11/n14389044.htm">传海关总署署长俞建华自杀死亡 官方称其病死</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
